Add protobuf and RPC methods implementation for Portal
