# infoblox-training-task-3/portal/pkg/svc/zserver.go
@@ -2,36 +2,19 @@ package svc
 
 import (
 	"context"
+	"fmt"
+	"time"
+
 	"infoblox-training-task-3/portal/pkg/pb"
 
 	"github.com/golang/protobuf/ptypes/empty"
+	"github.com/sirupsen/logrus"
+	"github.com/spf13/viper"
+	"google.golang.org/grpc"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+	"google.golang.org/protobuf/types/known/emptypb"
 )
-
-// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-// ~~~~~~~~~~~~~~~~~~~~~~~~~ A BRIEF DEVELOPMENT GUIDE ~~~~~~~~~~~~~~~~~~~~~~~~~
-//
-// TODO: Extend the Portal service by defining new RPCs and
-// and message types in the pb/service.proto file. These RPCs and messages
-// compose the API for your service. After modifying the proto schema in
-// pb/service.proto, call "make protobuf" to regenerate the protobuf files.
-//
-// TODO: Create an implementation of the Portal server
-// interface. This interface is generated by the protobuf compiler and exists
-// inside the pb/service.pb.go file. The "server" struct already provides an
-// implementation of Portal server interface service, but only
-// for the GetVersion function. You will need to implement any new RPCs you
-// add to your protobuf schema.
-//
-// TODO: Update the GetVersion function when newer versions of your service
-// become available. Feel free to change GetVersion to better-suit how your
-// versioning system, or get rid of it entirely. GetVersion helps make up a
-// simple "starter" example that allows an end-to-end example. It is not
-// required.
-//
-// TODO: Oh yeah, delete this guide when you no longer need it.
-//
-// ~~~~~~~~~~~~~~~~~~~~~~~~~~~ FAREWELL AND GOOD LUCK ~~~~~~~~~~~~~~~~~~~~~~~~~~
-// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 const (
 	// version is the current version of the service
@@ -39,14 +22,136 @@ const (
 )
 
 // Default implementation of the Portal server interface
-type server struct{}
+type server struct {
+	Logger      *logrus.Logger
+	description string
+	startTime   time.Time
+	requests    int64
+}
+
+type PortalClient interface {
+	GetVersion(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*pb.VersionResponse, error)
+	Get(ctx context.Context, in *pb.GetRequest, opts ...grpc.CallOption) (*pb.GetResponse, error)
+}
+
+type portalClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewPortalClient(cc grpc.ClientConnInterface) PortalClient {
+	return &portalClient{cc}
+}
+
+func (c *portalClient) GetVersion(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*pb.VersionResponse, error) {
+	out := new(pb.VersionResponse)
+	err := c.cc.Invoke(ctx, "/portal.Portal/GetVersion", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *portalClient) Get(ctx context.Context, in *pb.GetRequest, opts ...grpc.CallOption) (*pb.GetResponse, error) {
+	out := new(pb.GetResponse)
+	err := c.cc.Invoke(ctx, "/portal.Portal/Get", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
 
 // GetVersion returns the current version of the service
-func (server) GetVersion(context.Context, *empty.Empty) (*pb.VersionResponse, error) {
+func (s *server) GetVersion(context.Context, *empty.Empty) (*pb.VersionResponse, error) {
+	s.requests++
 	return &pb.VersionResponse{Version: version}, nil
 }
 
+func (s *server) Get(ctx context.Context, in *pb.GetRequest) (*pb.GetResponse, error) {
+	s.requests++
+
+	if in.GetService() == "portal" {
+		switch in.GetCommand() {
+		case "info":
+			description := s.GetDescr(in.Value)
+			return &pb.GetResponse{Service: in.GetService(), Response: description}, nil
+		case "uptime":
+			uptime := s.GetUpt()
+			return &pb.GetResponse{Service: in.GetService(), Response: uptime}, nil
+		case "requests":
+			requests := s.GetRequests()
+			return &pb.GetResponse{Service: in.GetService(), Response: requests}, nil
+		case "time":
+			time := s.GetTime()
+			return &pb.GetResponse{Service: in.GetService(), Response: time}, nil
+		case "reset":
+			status := s.Reset()
+			return &pb.GetResponse{Service: in.GetService(), Response: status}, nil
+		default:
+			return nil, status.Error(codes.InvalidArgument, "please provide commands: info, uptime, requests or reset")
+		}
+	}
+	if in.GetService() == "storage" && in.GetCommand() == "mode" {
+		return nil, status.Error(codes.InvalidArgument, "please provide commands: info, uptime, requests or reset")
+	}
+
+	if in.GetService() == "responder" || in.GetService() == "storage" {
+		conn, err := grpc.Dial("127.0.0.1:9095", grpc.WithInsecure())
+		if err != nil {
+			s.Logger.Fatalf("Failed to dial %s: %v", "127.0.0.1:9095", err)
+		}
+		defer conn.Close()
+		c := NewPortalClient(conn)
+		res, err := c.Get(context.Background(), &pb.GetRequest{
+			Value:   in.GetValue(),
+			Command: in.GetCommand(),
+			Service: in.GetService(),
+		})
+		if err != nil {
+			return nil, status.Error(codes.Unknown, fmt.Sprintf("Failed to call RPC method GetDescription: %v", err))
+			// s.Logger.Fatalf("Failed to call RPC method GetDescription: %v", err)
+		}
+		response := &pb.GetResponse{
+			Service:  res.GetService(),
+			Response: res.GetResponse(),
+		}
+		return response, nil
+	}
+	return nil, status.Error(codes.InvalidArgument, "err")
+}
+
+func (s *server) GetDescr(value string) string {
+	if value == "" {
+		return s.description
+	}
+	s.description = value
+	return s.description
+}
+
+func (s *server) GetUpt() string {
+	uptime := time.Since(s.startTime)
+	return uptime.String()
+}
+
+func (s *server) GetRequests() string {
+	return string(rune(s.requests))
+}
+
+func (s *server) GetTime() string {
+	return time.Now().String()
+}
+
+func (s *server) Reset() string {
+	s.description = viper.GetString("app.id")
+	s.requests = 0
+	s.startTime = time.Now()
+	return "service restarted"
+}
+
 // NewBasicServer returns an instance of the default server interface
-func NewBasicServer() (pb.PortalServer, error) {
-	return &server{}, nil
+func NewBasicServer(description string, startTime time.Time, requests int64) (pb.PortalServer, error) {
+	return &server{
+		description: description,
+		startTime:   startTime,
+		requests:    requests,
+	}, nil
 }
